--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -77,7 +77,7 @@
                         <a onclick="prices()" id="pricesToggle">Priser<i class="fas fa-sort-down"></i></a>
                         <div class="prices-dropdown-links" id="pricesDropdown">
                             <div class="nav-link-parent">
-                                <a href="">Nettbutikk/eCommerce</a>
+                                <a onclick="pricesScroll()">Nettbutikk/eCommerce</a>
                             </div>
                             <div class="nav-link-parent">
                                 <a href="">Personlig nettside</a>
