--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -1,10 +1,8 @@
 .make-order {
   width: 100%;
-  height: auto;
+  height: 100vh;
   background: transparent;
-  -webkit-transform: translateY(113px);
-          transform: translateY(113px);
-  margin-bottom: 170px;
+  background: #f7f7f7;
 }
 
 .make-order form {
@@ -17,6 +15,9 @@
           box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
   padding: 20px;
   border-radius: 7px;
+  -webkit-transform: translateY(110px);
+          transform: translateY(110px);
+  background: white;
 }
 
 .make-order form h1 {
