--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -4,10 +4,9 @@ $loader: rgb(80, 104, 180);
 // ORDER
 .make-order{
     width: 100%;
-    height: auto;
+    height: 100vh;
     background: transparent;
-    transform: translateY(113px);
-    margin-bottom: 170px;
+    background: #f7f7f7;
     // ORDER FORM
     form{
       margin: 0 auto;
@@ -18,6 +17,8 @@ $loader: rgb(80, 104, 180);
       box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
       padding: 20px;
       border-radius: 7px;
+      transform: translateY(110px);
+      background: white;
         // ORDER HEADING
         h1{
           color: #183B56;
