--- a/static/scss/userprofile/signup.scss
+++ b/static/scss/userprofile/signup.scss
@@ -2,21 +2,23 @@ $loader: rgb(80, 104, 180);
 
 // STANDARD PHONE
 .signup{
-    width: 100%;
-    height: auto;
-    background: transparent;
-    transform: translateY(113px);
-    margin-bottom: 170px;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  background: #f7f7f7;
+  padding-bottom: 140px;
     // SIGNUP FORM
     form{
       margin: 0 auto;
       text-align: left;
       background: transparent;
       width: 93%;
-      max-width: 400px;
+      max-width: 700px;
       box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
       padding: 20px;
       border-radius: 7px;
+      transform: translateY(110px);
+      background: white;
         // SIGNUP HEADING
         .heading{
           color: #183B56;
